<resources>
    <string name="app_name">Unity Sacco</string>
    <string name="dateFrom">12th Dec 2019</string>
    <string name="to">to</string>
    <string name="investmentId">7</string>
    <string name="dateTo">30th May 2020</string>
    <string name="amountInvested">Kes 540,000</string>
    <string name="interest_rate">10% Interest Rate</string>
    <string name="status">Active</string>
    <string name="payment_name">3rd Payment</string>
    <string name="pay_dates">24th Mar - 24th Apr</string>
    <string name="date_payed">24 Apr, 2019</string>
    <string name="received">Received</string>
    <string name="amount">Kes 320,000.00</string>
    <string name="status_title">Status:</string>
    <string name="date_of_investment">Date of Investment:</string>
    <string name="_12th_dec_2019">12th Dec 2019</string>
    <string name="maturity_of_contract">Maturity of Contract:</string>
    <string name="amount_invested">Amount Invested:</string>
    <string name="kes_">Ksh 0.00</string>
    <string name="amount_refunded">Amount Refunded:</string>
    <string name="kes_1000_00">Kes 1000.00</string>
    <string name="investment_balance">Investment Balance:</string>
    <string name="kes_00_00">Kes 00.00</string>
    <string name="interest_rate_title">Interest Rate:</string>
    <string name="_rate_percentage">%</string>
    <string name="interest_payed">Interest Payed:</string>
    <string name="kes_24_000_00">Kes 24,000.00</string>
    <string name="kcb">KCB</string>
    <string name="acc_no">Acc No:</string>
    <string name="_0923475885968">0923475885968</string>
    <string name="expected_total_investment">Expected Total Investment:</string>
    <string name="make_request">Make Request</string>
    <string name="new_message">New Message</string>
    <string name="null_">null</string>
    <string name="new_member">New member</string>
    <string name="already_a_member">Already a member</string>
    <string name="todo">TODO</string>
    <string name="national_id">National ID</string>
    <string name="registered_national_id">Registered National ID</string>
    <string name="password">New Password</string>
    <string name="your_password">Password</string>
    <string name="retypePassword">Retype Password</string>
    <string name="password_error">Password Mismatch</string>
    <string name="members_login">MEMBERS LOGIN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hello_member">Hello, John</string>
    <string name="_member_phone">+254 712345678</string>
    <string name="current_time">30th Apr, Thur 08:48:00</string>
</resources>
