<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="10dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card2_bg"
    android:orientation="horizontal"
    android:padding="10dp"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtPaymentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manja_b"
            android:text="@string/payment_name"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/txtPaymentPeriod"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manja_r"
            android:text="@string/pay_dates"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="end"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtPaymentDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_payed"
            android:fontFamily="@font/manja_r"
            android:textSize="14sp"
            android:textColor="@color/colorBlack2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manja_r"
            android:text="@string/received"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/txtPaymentAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manja_b"
            android:text="@string/amount"
            android:textColor="@color/colorBlack"
            android:textSize="17sp" />
    </LinearLayout>
</LinearLayout>
</com.google.android.material.card.MaterialCardView>