<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:background="@color/coloMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/national_id"
            app:startIconDrawable="@drawable/ic_person_black_24dp"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textNationalId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:fontFamily="@font/manja_r"
                android:textSize="15sp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/your_password"
            app:startIconDrawable="@drawable/ic_lock_black_24dp"
            app:endIconMode="password_toggle"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="@font/manja_r"
                android:textSize="15sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/members_login"
            android:fontFamily="@font/manja_b"
            android:textColor="@color/coloMain" />

        <Button
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="#00FFFFFF"
            android:fontFamily="@font/manja_b"
            android:text="@string/forgot_password"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textSize="14sp" />

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>